# wm_system

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose-local.yml  docker-compose-prod-test.yml  docker-compose-prod.yml  docker-compose.yml
.github/: deploy_workflow.yml
.github/workflows/: deploy_workflow.yml
backend/: .dockerignore  .gitignore  Dockerfile  db_backup_script.py  docker-compose-db.yml  docker-compose.local.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/accounts/: admin.py  managers.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
backend/export_files/: apps.py  models.py  urls.py  views.py
backend/postgres_backups/: db_backup_script.py
backend/routing/: admin.py  apps.py  models.py  resources.py  serializers.py  urls.py  views.py
backend/routing/migrations/: 0001_initial.py
backend/search_db/: serializers.py  urls.py  views.py
backend/upload_files/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/upload_files/helpers/: generate_pdf_with_qr_codes.py
backend/upload_files/migrations/: 0001_initial.py  0002_remove_uploadedfilerowdata_asset_type.py
front_end/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile-test  Dockerfile_dev  next.config.mjs  package-lock.json  package.json
nginx/: Dockerfile  nginx.conf
ssl_renewal/: ssl_renewal_script.py
terraform/: main.tf  values.tfvars  variables.tf
webserver/: Dockerfile  default.conf
(+70 files in other folders)
